Fix crash in QTreeWidgetItem::sortChildren when adding new item.

Recursive call is caused if user code calls QtreeWidgetItem()::sortChildren and
sorting is enbled in QTreeWidget.

First call is from user code and second is caused by timer.
When timer expires second call is made.

This recursion is prevented with QTreeModel::SkipSorting skipSorting()
in QTreeWidgetItem::sortChildren();

Task-number: QTBUG-20345

Change-Id: I48af98b03c0291de8da90d1581bc55cc89846b8c
Reviewed-by: Stephen Kelly <stephen.kelly@kdab.com>